:mouse2: faltan cosillas :mouse2:

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,16 @@
 .error {
-    color: red;
+	color: red;
 }
 
 .body {
-    font-family: 'Roboto', sans-serif;
+	font-family: "Roboto", sans-serif;
+	height: 100%;
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 .header {
-    text-align: center;
+	text-align: center;
 }
-
-
