:mouse2: notifications added!

--- a/templates/todos.html
+++ b/templates/todos.html
@@ -4,11 +4,13 @@
 		<div class="uk-vertical-align uk-text-center uk-height-1-1">
 			<div class="uk-navbar-container uk-margin" uk-navbar>
 				<div class="uk-navbar-left">
-					<a class="uk-navbar-item uk-logo"> Your To dos! </a>
+					<a class="uk-navbar-item uk-logo"> Your Susy Todos! </a>
 				</div>
 
 				<div class="uk-navbar-right">
-					<button class="uk-button uk-button-default">Log Out</button>
+					<a href="/">
+						<button class="uk-button uk-button-default">Log Out</button>
+					</a>
 				</div>
 			</div>
 
@@ -20,6 +22,7 @@
 					data-id_user="{{data}}"
 					name="description"
 					placeholder="Task"
+					required
 				/>
 				<!-- <input type="text" id="category" name="category" placeholder="Categoría"> -->
 				<!-- <input type="date" id="end_date" name="end_date"> -->
