--- a/templates/login.html
+++ b/templates/login.html
@@ -3,24 +3,31 @@
 	<div class="uk-vertical-align uk-text-center uk-height-1-1">
 		<div class="uk-vertical-align uk-text-center uk-height-1-1">
 			<div class="uk-background-primary uk-light uk-padding uk-panel">
-				<p class="uk-h4"><span>To dos Manager</span></p>
+				<h3>Susy - Todos Manager</h3>
 			</div>
 
-			<div class="uk-child-width-1-2@s uk-text-center" uk-grid>
+			<div
+				class="uk-grid-collapse uk-child-width-expand@s uk-text-center"
+				uk-grid
+			>
 				<div>
-					<div class="uk-background-muted uk-padding uk-panel">
-						<p class="uk-h4"><span>Login</span></p>
+					<div class="uk-background-muted uk-padding">
+						<p class="uk-h4 uk-margin-remove">Login</p>
 					</div>
 					<form class="uk-padding" id="login">
 						<div class="uk-margin">
 							<div class="uk-inline">
-								<span class="uk-form-icon" uk-icon="icon: user"></span>
+								<span
+									class="uk-form-icon uk-form-icon-flip"
+									uk-icon="icon: user"
+								></span>
 								<input
 									id="username_login"
 									name="username_login"
-									placeholder="Nombre de Usuario"
+									placeholder="Username"
 									class="uk-input"
 									type="text"
+									required
 								/>
 							</div>
 						</div>
@@ -34,39 +41,41 @@
 								<input
 									id="password_login"
 									name="password_login"
-									placeholder="Contraseña"
+									placeholder="Password"
 									class="uk-input"
 									type="password"
-									autofocus
+									required
 								/>
 							</div>
 						</div>
 						<div id="baduser_login" class="hidden">
-							*O el usuario no existe o la contraseña no coincide
+							* The username doesn't exist or password doesn't not match
 						</div>
-						<!-- <div id="badpass_login" class="hidden">*Contraseña inválida</div> -->
 						<input
 							type="submit"
 							class="uk-button uk-button-secondary"
-							value="Ingresar"
+							value="Login"
 						/>
 					</form>
 				</div>
-
 				<div>
-					<div class="uk-background-secondary uk-light uk-padding uk-panel">
-						<p class="uk-h4"><span>¿Aún no estás registrado?</span></p>
+					<div class="uk-background-secondary uk-padding uk-light">
+						<p class="uk-h4 uk-margin-remove">Register</p>
 					</div>
 					<form class="uk-padding" id="createuser">
 						<div class="uk-margin">
 							<div class="uk-inline">
-								<span class="uk-form-icon" uk-icon="icon: user"></span>
+								<span
+									class="uk-form-icon uk-form-icon-flip"
+									uk-icon="icon: user"
+								></span>
 								<input
 									id="username_reg"
 									name="username_reg"
-									placeholder="Nombre de Usuario"
+									placeholder="Username"
 									class="uk-input"
 									type="text"
+									required
 								/>
 							</div>
 						</div>
@@ -79,12 +88,12 @@
 								></span>
 								<input
 									id="email"
-									placeholder="Correo"
+									placeholder="Email"
 									class="uk-input"
-									autofocus
 									onkeyup="validEmail(this)"
 									name="email"
 									type="text"
+									required
 								/>
 							</div>
 						</div>
@@ -98,24 +107,24 @@
 								<input
 									id="password_reg"
 									name="password_reg"
-									placeholder="Contraseña"
+									placeholder="Password"
 									class="uk-input"
 									type="password"
-									autofocus
+									required
 								/>
 							</div>
 						</div>
 						<div id="baduser_register" class="hidden">
-							*Ese usuario ya existe
+							*That user already exists
 						</div>
-						<div id="bademail_register" class="hidden">*Correo inválido</div>
+						<div id="bademail_register" class="hidden">*Invalid email</div>
 						<div id="sucesscreate" class="hidden">
-							¡Se creó el usuario satisfactoriamente!
+							¡User was created successfully!
 						</div>
 						<input
 							type="submit"
 							class="uk-button uk-button-secondary"
-							value="Registrarse"
+							value="Register"
 						/>
 					</form>
 				</div>
