--- a/templates/login.html
+++ b/templates/login.html
@@ -65,9 +65,9 @@
             autofocus
           />
         </div>
-        </div> 
-        <div id="baduser_login" class="hidden">*O el usuario no existe o la contraseña no coincide</div>
-        <!-- <div id="badpass_login" class="hidden">*Contraseña inválida</div> -->
+        
+        <div id="badpass_login" class="hidden">*La contraseña no coincide</div></div> 
+        <div id="baduser_login" class="hidden">*El usuario no existe</div>
         <input type="submit" class="uk-button uk-button-secondary" value="Ingresar"/> 
       </form>
       </div>
