--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block body %}
 <body>
-	<div class="uk-flex uk-height-medium uk-background-muted uk-margin uk-text-center">
+	<div class="uk-flex uk-height-medium uk-margin uk-text-center">
     <div class="uk-margin-auto uk-margin-auto-vertical uk-width-1-2@s uk-card uk-card-default uk-card-body">Página no encontrada</div>
 </div>
 </body>
