:mouse2: styles modified

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <body class="uk-height-1-1">
 	<div class="uk-vertical-align uk-text-center uk-height-1-1">
 		<div class="uk-vertical-align uk-text-center uk-height-1-1">
-			<div class="uk-background-primary uk-light uk-padding uk-panel">
+			<div class="uk-background-secondary uk-light uk-padding uk-panel">
 				<h3>Susy - Todos Manager</h3>
 			</div>
 
@@ -59,7 +59,7 @@
 					</form>
 				</div>
 				<div>
-					<div class="uk-background-secondary uk-padding uk-light">
+					<div class="uk-background-primary uk-padding uk-light">
 						<p class="uk-h4 uk-margin-remove">Register</p>
 					</div>
 					<form class="uk-padding" id="createuser">
