--- a/templates/login.html
+++ b/templates/login.html
@@ -49,7 +49,7 @@
 							</div>
             </div>
             <div id="badpass_login" class="hidden">
-              *This password not exists
+              *This password is incorrect
             </div>
 						<div id="baduser_login" class="hidden">
 							* The username doesn't exist or password doesn't not match
