--- a/templates/todos.html
+++ b/templates/todos.html
@@ -47,7 +47,7 @@
 					class="uk-button uk-button-primary uk-button-small"
 					id="incomplete"
 				>
-					Activate
+					Active
 				</button>
 				<button
 					class="uk-button uk-button-danger uk-button-small"
