--- a/templates/todos.html
+++ b/templates/todos.html
@@ -13,8 +13,8 @@
 				<div class="uk-navbar-right">
 					<ul class="uk-navbar-nav">
 							<li class="susy_white" uk-toggle="target: #offcanvas-nav">
-								<a href="#" class="uk-text-bold">
-									Categorías
+								<a class="uk-text-bold">
+									Tablero
 								</a>
 							</li>
 							<li class="uk-active">
@@ -30,7 +30,7 @@
 				<div class="uk-offcanvas-bar">
 		
 					<ul class="uk-nav uk-nav-default">
-						<li class="uk-nav-header">Categories</li>
+						<li class="uk-nav-header">Tableros</li>
 						<li class="uk-nav-divider"></li>
 						<li><a href="#"><span class="uk-margin-small-right"></span>cat 1</a></li>
 					</ul>
