--- a/templates/todos.html
+++ b/templates/todos.html
@@ -53,7 +53,18 @@
 					value="Add"
 					class="uk-button uk-button-default"
 				/>
+				<br>
+				<label for="deadline"> Deadline date:</label>
+				<div class="uk-inline uk-margin">
+					<input
+						id="deadline"
+						class="uk-input"
+						type="date"
+						required
+					/>
+				</div>
 			</form>
+			
 			
 
 			<div class="uk-overflow-auto uk-padding-large uk-padding-remove-top uk-padding-remove-bottom">
