--- a/SuzyTodos/app/src/main/res/layout/activity_main.xml
+++ b/SuzyTodos/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#161d20">
 
         <TextView
             android:layout_width="match_parent"
@@ -17,6 +18,7 @@
             android:text="@string/name"
             android:textSize="36sp"
             android:gravity="center"
+            style="@style/mainStyle"
             android:layout_margin="10dp"/>
         
         <View
@@ -25,71 +27,84 @@
             android:background="@color/black"
             android:layout_margin="5dp"/>
 
-        <TextView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textSize="36sp"
-            android:gravity="center"
-            android:layout_margin="10dp"/>
+            android:layout_height="match_parent"
+            android:background="#FFFFFF">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:textSize="26sp"
+                android:gravity="center"
+                style="@style/titleStyle"
+                android:textColor="#FFFFFF"
+                android:background="#1e87f0"
+                android:padding="10dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/username"
-            android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                android:textSize="16sp"
+                android:textColor="#FFFFFF"
+                android:layout_margin="5dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:textSize="16sp"
+                android:layout_margin="5dp"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="26dp"
-            android:onClick="abrirtodos"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="26dp"
+                style="@style/buttonStyle"
+                android:onClick="abrirTodos"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/signup"
-            android:textSize="36sp"
-            android:gravity="center"
-            android:layout_margin="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/signup"
+                style="@style/titleStyle"
+                android:textSize="26sp"
+                android:gravity="center"
+                android:background="#fff"
+                android:padding="10dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/username"
-            android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                android:textSize="16sp"
+                android:layout_margin="5dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:textSize="16sp"
+                android:layout_margin="5dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
+                android:textSize="16sp"
+                android:layout_margin="5dp"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/signup"
-            android:layout_marginLeft="5dp"/>
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/signup"
+                style="@style/buttonStyle"
+                android:layout_marginLeft="5dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 
