--- a/suzytodos/app/src/main/res/layout/activity_main.xml
+++ b/suzytodos/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
                 android:text="@string/signup"
                 style="@style/buttonStyle"
                 android:onClick="signup"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginStart="5dp"/>
         </LinearLayout>
     </LinearLayout>
 
