--- a/suzytodos/app/src/main/res/layout/activity_todos.xml
+++ b/suzytodos/app/src/main/res/layout/activity_todos.xml
@@ -15,6 +15,7 @@
             android:id="@+id/welcome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/welcome"
             android:gravity="center"
             style="@style/titleStyle"
             android:padding="10dp"
