--- a/suzytodos/app/src/main/res/layout/tables.xml
+++ b/suzytodos/app/src/main/res/layout/tables.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".todos">
-    
+    tools:context=".tables">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/welcome"
+            android:id="@+id/head"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome"
+            android:text="@string/tables"
             android:gravity="center"
             style="@style/titleStyle"
             android:padding="10dp"
@@ -38,17 +38,17 @@
                 android:id="@+id/adder"
                 android:layout_width="275dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/todo"
+                android:hint="@string/table"
                 android:layout_margin="10dp"/>
 
             <Button
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="@string/addtodo"
+                android:text="@string/addtable"
                 android:textSize="12sp"
                 android:layout_marginStart="5dp"
                 style="@style/buttonStyle"
-                android:onClick="addTodo"/>
+                android:onClick="addtable"/>
 
         </LinearLayout>
 
@@ -60,32 +60,7 @@
             <ListView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
-                android:layout_height="520dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="190dp"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/logout"
-                    android:textSize="12sp"
-                    android:onClick="logout"
-                    style="@style/buttonStyle"/>
-
-                <Button
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tables"
-                    android:textSize="12sp"
-                    android:onClick="abrirtables"
-                    style="@style/buttonStyle"/>
-
-            </LinearLayout>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
